# flutter_go_caller

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
apps/example/: pubspec.yaml
apps/example/android/app/: build.gradle.kts
apps/example/ios/Runner.xcodeproj/: project.pbxproj
apps/example/lib/: main.dart
apps/example/linux/: CMakeLists.txt
apps/example/linux/flutter/: generated_plugins.cmake
apps/example/macos/Runner.xcodeproj/: project.pbxproj
apps/example/web/: prebuild
apps/example/windows/: CMakeLists.txt
apps/example/windows/runner/: Runner.rc  main.cpp
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html  prebuild
example/windows/flutter/: generated_plugins.cmake
go/: Makefile  c_export.go  call.go  flutter_go_caller.h  main.go  wasm_export.go
ios/: flutter_go_caller.podspec
lib/: flutter_go_caller.dart  flutter_go_caller_bindings_generated.dart
lib/src/: flutter_go_caller.dart  flutter_go_caller_bindings_generated.dart  flutter_go_caller_io.dart  flutter_go_caller_web.dart  go_web.dart
linux/: CMakeLists.txt
macos/: flutter_go_caller.podspec
macos/Classes/: flutter_go_caller.c
prebuild/Web/: libflutter_go_caller.wasm
script/: linux_docker.sh  linux_multi_arch_docker.sh
script/docker/: docker-entrypoint.sh  u2004.Dockerfile
src/: CMakeLists.txt  flutter_go_caller.c
windows/: CMakeLists.txt
(+4 files in other folders)
